--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,79 @@ h1 {
     margin-bottom: 24px;
 }
 
+.white-title {
+    color: #fff;
+}
+
+p {
+    font-size: 1.1rem;
+    font-weight: 300;
+    line-height: 28px;
+    color: #c2cbe5;
+    max-width: 450px;
+}
+
+form {
+    position: relative;
+    max-width: 427px;
+    width: 100%;
+    margin-top: 40px;
+    margin-bottom: 42px;
+}
+
+input {
+    width: 100%;
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 28px;
+    background-color: #2c344b;
+    border-radius: 28px;
+    border: 0;
+    color: #fff;
+    padding: 14px 32px;
+    margin-bottom: 8px;
+}
+
+.error {
+    visibility: hidden;
+    font-size: 0.8rem;
+    font-weight: 400;
+    line-height: 14px;
+    padding-left: 32px;
+    color: #fb3e3e;
+}
+
+button {
+    position: absolute;
+    font-size: 0.9rem;
+    font-weight: 400;
+    line-height: 28px;
+    background-color: #54e6af;
+    border: 0;
+    box-shadow: 0px 25px 20px -20px rgba(84, 230, 175, 0.2);
+    border-radius: 28px;
+    padding: 9px 27px;
+    right: 5px;
+    top: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #b3ffe2;
+}
+
+.brands {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+footer {
+    max-width: 1440px;
+    width: 100%;
+    text-align: right;
+    margin-top: -52px;
+    z-index: 10;
+}
